restarted from adding portfolio and services, Added css files for portfolio and services

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -396,20 +396,21 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Design</li>
-            <li data-filter=".filter-branding">Web</li>
+            <li data-filter="*" class="filter-active">ALL</li>
+            <li data-filter=".filter-app">APP</li>
+            <li data-filter=".filter-product">DESIGN</li>
+            <li data-filter=".filter-branding">WEB</li>
+            <li data-filter=".filter-robotics">ROBOTICS</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/tuonta.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Tuon Ta App</h4>
                 <p>Educational game development</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Tuon Ta App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/tuonta.jpg" title="Tuon Ta App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -435,21 +436,21 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/dal-ani.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Innovation Olympics</h4>
+                <h4>Dal-Ani Innovation Olympics</h4>
                 <p>Hackathon project presentation</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="Innovation Olympics" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/dal-ani.jpg" title="Innovation Olympics" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/blender.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>3D Modeling</h4>
                 <p>Blender artwork</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="3D Modeling" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/blender.png" title="3D Modeling" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -460,6 +461,36 @@
                 <h4>Organization Website</h4>
                 <p>Student organization web design</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Organization Website" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="assets/img/masonry-portfolio/roboticarm.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Robotic Arm</h4>
+                <p>Arduino-controlled robotic arm project</p>
+                <a href="assets/img/masonry-portfolio/roboticarm.jpg" title="Robotic Arm" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="assets/img/masonry-portfolio/rover.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Rover</h4>
+                <p>Remote-controlled exploration rover</p>
+                <a href="assets/img/masonry-portfolio/rover.jpg" title="Rover" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="assets/img/masonry-portfolio/cleaning-machine.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Automated Cleaning Machine</h4>
+                <p>Self-navigating cleaning robot prototype</p>
+                <a href="assets/img/masonry-portfolio/cleaning-machine.jpg" title="Automated Cleaning Machine" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -567,7 +598,7 @@
                 </svg>
                 <i class="bi bi-calculator"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="service-details.html" class="stretched-link">
                 <h3>Financial Management</h3>
               </a>
               <p>Skilled in budgeting, record-keeping, and managing organizational funds from student leadership roles.</p>
