--- a/MyResume/service-details.html
+++ b/MyResume/service-details.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/service-details.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume
@@ -73,57 +74,209 @@
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="row gy-5">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="service-box">
-              <h4>Serices List</h4>
-              <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="service-details-content">
+              
+              <div class="service-hero-image">
+                <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=800&h=400&fit=crop" class="img-fluid" alt="Financial Management">
               </div>
-            </div><!-- End Services List -->
 
-            <div class="service-box">
-              <h4>Download Catalog</h4>
-              <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
-                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
+              <div class="back-button-container">
+                <a href="index.html#services" class="back-button">
+                  <i class="bi bi-arrow-left"></i>
+                  Back to Services
+                </a>
               </div>
-            </div><!-- End Services List -->
 
-            <div class="help-box d-flex flex-column justify-content-center align-items-center">
-              <i class="bi bi-headset help-icon"></i>
-              <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <div class="service-header-card">
+                <h2>Student-Focused Financial Management & Budgeting</h2>
+                <p class="lead">
+                  As a student with hands-on experience in organizational financial management, I offer practical budgeting solutions tailored for students, young professionals, and small organizations. My approach combines academic knowledge with real-world experience gained through student leadership roles and personal financial planning.
+                </p>
+              </div>
+
+              <div class="service-overview">
+                <h3>Why Choose My Financial Management Services?</h3>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="overview-item">
+                      <i class="bi bi-mortarboard"></i>
+                      <div>
+                        <h5>Student-Centric Approach</h5>
+                        <p>Understanding the unique financial challenges students face with limited income and high expenses.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="overview-item">
+                      <i class="bi bi-graph-up"></i>
+                      <div>
+                        <h5>Practical Experience</h5>
+                        <p>Real experience from managing organizational budgets and personal financial planning.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="service-description-card">
+                <h3>My Financial Management Services</h3>
+                <p>
+                  Drawing from my experience in student organizations and personal finance management, I offer specialized services that address the real financial needs of students and young professionals. Let me help you build solid financial foundations for your future.
+                </p>
+              </div>
+
+              <div class="services-grid">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="service-feature">
+                      <i class="bi bi-piggy-bank service-icon"></i>
+                      <h4>Student Budget Planning</h4>
+                      <p>Create realistic budgets for tuition, living expenses, and savings goals with limited income streams. Perfect for managing allowances and part-time job income.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="service-feature">
+                      <i class="bi bi-receipt service-icon"></i>
+                      <h4>Expense Tracking & Analysis</h4>
+                      <p>Implement simple systems to track spending and identify areas for cost reduction. Learn to categorize and monitor your daily expenses effectively.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="service-feature">
+                      <i class="bi bi-building service-icon"></i>
+                      <h4>Organization Fund Management</h4>
+                      <p>Help student organizations and clubs manage their finances effectively and transparently. Experience from managing real organizational budgets.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="service-feature">
+                      <i class="bi bi-calculator service-icon"></i>
+                      <h4>Financial Goal Setting</h4>
+                      <p>Set realistic financial goals and create actionable plans to achieve them during and after studies. Build habits that last beyond college.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="experience-card">
+                <h3>My Financial Management Experience</h3>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="experience-item">
+                      <div class="experience-icon">
+                        <i class="bi bi-people-fill"></i>
+                      </div>
+                      <h5>Student Leadership</h5>
+                      <p>Managed budgets and financial records for multiple student organizations</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="experience-item">
+                      <div class="experience-icon">
+                        <i class="bi bi-cash-stack"></i>
+                      </div>
+                      <h5>Budget Management</h5>
+                      <p>Successfully handled organizational funds and maintained transparent financial records</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="experience-item">
+                      <div class="experience-icon">
+                        <i class="bi bi-graph-up-arrow"></i>
+                      </div>
+                      <h5>Personal Finance</h5>
+                      <p>Applied budgeting skills to manage personal finances throughout my studies</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
-
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-sidebar">
+              
+              <div class="service-info-card">
+                <h3>Service Information</h3>
+                <div class="service-details-list">
+                  <div class="service-item">
+                    <i class="bi bi-clock"></i>
+                    <div>
+                      <strong>Session Duration:</strong>
+                      <span>1-2 Hour Initial Consultation</span>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <i class="bi bi-calendar-week"></i>
+                    <div>
+                      <strong>Availability:</strong>
+                      <span>Evenings & Weekends</span>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <i class="bi bi-currency-dollar"></i>
+                    <div>
+                      <strong>Pricing:</strong>
+                      <span>Student-Friendly Rates</span>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <i class="bi bi-mortarboard"></i>
+                    <div>
+                      <strong>Target Clients:</strong>
+                      <span>Students & Young Professionals</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="service-packages-card">
+                <h4>Service Packages</h4>
+                <div class="package-item">
+                  <h5>Budget Basics</h5>
+                  <p>One-time consultation to set up your first comprehensive budget and expense tracking system</p>
+                  <span class="package-price">₱500</span>
+                </div>
+                <div class="package-item">
+                  <h5>Financial Mentorship</h5>
+                  <p>Monthly check-ins for ongoing financial guidance, budget reviews, and goal tracking</p>
+                  <span class="package-price">₱300/month</span>
+                </div>
+                <div class="package-item">
+                  <h5>Organization Finance Setup</h5>
+                  <p>Complete financial system setup for student organizations with templates and training</p>
+                  <span class="package-price">₱2,000</span>
+                </div>
+              </div>
+
+              <div class="service-features-card">
+                <h4>What You'll Get</h4>
+                <ul class="features-list">
+                  <li><i class="bi bi-check-circle"></i> Personalized budget templates</li>
+                  <li><i class="bi bi-check-circle"></i> Expense tracking tools</li>
+                  <li><i class="bi bi-check-circle"></i> Financial goal planning</li>
+                  <li><i class="bi bi-check-circle"></i> Money-saving strategies</li>
+                  <li><i class="bi bi-check-circle"></i> Ongoing support & guidance</li>
+                  <li><i class="bi bi-check-circle"></i> Digital resources & templates</li>
+                </ul>
+              </div>
+
+              <div class="service-cta-card">
+                <h4>Ready to Take Control of Your Finances?</h4>
+                <p>Let's work together to build better financial habits that will serve you throughout your studies and beyond. Start your journey to financial independence today!</p>
+                <div class="d-grid gap-2">
+                  <a href="index.html#contact" class="btn btn-primary">Schedule Consultation</a>
+                  <a href="tel:+1234567890" class="btn btn-outline-light">Call Now</a>
+                </div>
+              </div>
+
+            </div>
           </div>
 
         </div>
